--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,15 +1,18 @@
 [tool.poetry]
 name = "potato-bot-for-discord"
 version = "0.1.0"
-description = ""
-authors = ["Your Name <you@example.com>"]
+description = "Bot for Mr.Potato discord server"
+authors = ["Rahul Wavare <rahulrakida@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
-"discord.py" = "^1.7.3"
+discord.py = "^1.7.3"
 Flask = "^2.0.1"
 
 [tool.poetry.dev-dependencies]
+coverage = "^5.5"
+pytest = "^6.2"
+nuitka = "^0.6.15"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
